# slick

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Contributors.md  License.txt  Readme.md
cmake/: CMakerCommonSettings.cmake  CMakerCommonUtil.cmake  SlickDependencies.cmake  SlickDependencies_Config.cmake.in
data/: handeye-1.txt  handeye.txt
scripts/: Slick.sublime-project  run_ninja_build.bat.in  run_windbg.bat.in  set_paths.bat.in  set_paths_and_run_vc.bat.in
slick/: CMakeLists.txt  datatypes.h  slick_api.h
slick/geometry/: line2d.cc  line2d.h  line3d.cc  line3d.h  line_estimation.h  plane3d.cc  plane3d.h  plane_estimation.h
slick/math/: derivative.h  se2.h  se3.h  sl.h  so2.h  so3.h
slick/scene/: abs_orientation.cc  abs_orientation.h  atan_camera.cc  atan_camera.h  cylinder_camera.h  poli_camera.cc  poli_camera.h  three_point_pose.cc  three_point_pose.h  triangulation.cc  triangulation.h
slick/test/: CMakeLists.txt  helpers.h  test_math_se2.cc  test_math_se3.cc  test_math_sl.cc  test_math_so2.cc  test_math_so3.cc  test_scene_triangulation.cc  test_util_handeye.cc
slick/test/unittest/: CMakeLists.txt  geometry_line2d_unittest.cc  geometry_line3d_unittest.cc  geometry_plane3d_unittest.cc  math_se2_unittest.cc  math_se3_unittest.cc  math_so2_unittest.cc  math_so3_unittest.cc  util.h
slick/util/: common.h  handeye.h  kalman.h  mestimator.cc  mestimator.h  wls.h
